// Use dbdiagram.io to visualize this schema

Table users {
  id integer [primary key]
  uid_firebase varchar [note: 'UID de Firebase Auth para sincronización']
  name varchar
  email varchar
  role varchar [note: 'admin | client']
  fcm_token varchar
  created_at timestamp
}

Table courts {
  id integer [primary key]
  court_id_firebase varchar
  name varchar
  type varchar
  price_per_hour float
  is_enabled boolean
  description text
  image_url varchar
  center_id integer [not null]
  disabled_reason text
  disabled_from timestamp
  disabled_until timestamp
}

Table reservations {
  id integer [primary key]
  user_id varchar [not null]
  court_id varchar [not null]
  date date [note: 'Formato YYYY-MM-DD']
  start_time time [note: 'HH:mm']
  end_time time
  status varchar [note: 'confirmed | cancelled | expired']
  total_price float
  payment_id varchar
  access_code varchar
  access_code_status varchar [note: 'pending | used | expired']
  qr_data text
  created_at timestamp
  scanned_at timestamp
}

Table notifications {
  id integer [primary key]
  user_id integer [not null]
  title varchar
  body text
  type varchar
  is_read boolean
  created_at timestamp
}

Table sport_centers {
  id integer [primary key]
  name varchar
  description varchar
  address varchar
  city varchar
  latitude decimal
  longitude decimal
  imageUrl varchar
  phone varchar
  email varchar
  isEnabled boolean
  createdAt timestamp
}


// Relaciones
Ref: reservations.user_id > users.id // Many-to-one
Ref: reservations.court_id > courts.id // Many-to-one
Ref: notifications.user_id > users.id // Many-to-one
Ref: courts.center_id > sport_centers.id